--- a/config/database.yml
+++ b/config/database.yml
@@ -5,22 +5,33 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  adapter: postgresql
+  encoding: unicode
   timeout: 5000
+  # For details on connection pooling, see Rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: usr
+  password: <%= ENV['DB_PASSWORD'] %>
 
 development:
   <<: *default
-  database: db/development.sqlite3
-
+  adapter: postgresql
+  database: usr_development
+  username: usr
+  password: <%= ENV['DB_PASSWORD'] %>
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: usr_test
+  username: usr
+  password: <%= ENV['DB_PASSWORD'] %>
 
 production:
-  <<: *default
   adapter: postgresql
-  database: db/production.sqlite3
+  database: usr_production
+  username: showsadmin
+  password: <%= ENV['DB_PASSWORD'] %>
